fable/test/syntax_error/save_with_dims.f
      program prog
      save nums(2)
      end
